hphp/hack/test/typecheck/is_as_no_check_unbound_name.php.exp
File "is_as_no_check_unbound_name.php", line 8, characters 8-8:
Unbound name: B (an object type) (Naming[2049])
